[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "wizintel"
version = "0.1.0"
description = "Passive OSINT and external exposure intelligence for security analysts."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "WizIntel Contributors" }]
keywords = ["osint", "security", "defensive", "exposure-management"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.0",
  "PyYAML>=6.0.0",
  "rich>=13.7.0",
  "SQLAlchemy>=2.0.0",
  "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.0",
  "pytest>=8.2.0",
  "pytest-mock>=3.14.0",
  "ruff>=0.6.0",
  "types-PyYAML>=6.0.12.20240311",
]

[project.scripts]
wizintel = "wizintel.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"wizintel.reports" = ["templates/*.j2"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "S", "SIM", "C4", "RUF"]
ignore = [
  "S101", # tests use assert
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.mypy]
python_version = "3.11"
packages = ["wizintel"]
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = []

[[tool.mypy.overrides]]
module = ["yaml.*"]
ignore_missing_imports = true
